fixed issue with images overflowing markdown text containers

--- a/mod-picker/app/assets/stylesheets/general/forms.scss
+++ b/mod-picker/app/assets/stylesheets/general/forms.scss
@@ -107,6 +107,7 @@ input[type="file"] {
 
   img {
     vertical-align: bottom;
+    max-width: 100%;
   }
 }
 
